# ai_kreuzberg

./: .deepsource.toml  .dockerignore  .gitignore  .gitmodules  .golangci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .shellcheckrc  AGENTS.md  ANALYSIS_SUMMARY.txt  ATTRIBUTIONS.md  CHANGELOG.md  CHANGES_MADE.txt  CSHARP_PARITY_TODO.md  Cargo.toml  Dockerfile.windows-build  Dockerfile.windows-test  IMPLEMENTATION_SUMMARY.md  INTERFACE_PARITY.md  OPTIMIZATION_STRING_POOLING.md  PERFORMANCE_OPTIMIZATIONS.md  PROFILING_ANALYSIS_20377408899.md  README.md  RUBY_BENCHMARK_DEBUG_REPORT.md  RUBY_BENCHMARK_FIX_SUMMARY.md  SMOKE_TEST_ANALYSIS.md  SMOKE_TEST_COVERAGE_MATRIX.md  TODO.md  Taskfile.yaml  Taskfile.yml  WASM_BUILD_FIX.md  WASM_PDFIUM_SOLUTION.md  ai-rulez.yaml  benchmark_baseline.py  benchmark_msgpack_20250702_003800.json  benchmark_results.json  docker-compose.example.yml  docker-compose.yml  end_to_end_benchmark.py  (+10 more)
.cargo/: config.toml
.docker/: Dockerfile  README.md
.github/: README.md
benchmarks/: README.md  __init__.py  batch_size_benchmark.py  batch_validation_benchmark.py  benchmark_baseline.py  end_to_end_benchmark.py  kreuzberg_v4_rc1_enhanced_insights.md  kreuzberg_v4_rc1_summary.md  pyproject.toml  serialization_benchmark.py  statistical_benchmark.py  tesseract_output_benchmark.py  token_reduction_compression_benchmark.py
benchmarks/results/: latest.json
benchmarks/src/: benchmark.py  benchmarks.py  cli.py  extractors.py  framework_config.py  models.py  profiler.py  runner.py
benchmarks/src/kreuzberg_benchmarks/: __init__.py  __main__.py  benchmarks.py  cli.py  models.py  profiler.py  runner.py
benchmarks/tests/: aggregation_test.py  field_mapping_test.py  imports_test.py  profiler_test.py  serialization_test.py  types_test.py
comparative-benchmarks/: pyproject.toml
comparative-benchmarks/src/: cli.py  data_transform.py  subprocess_runner.py
comparative-benchmarks/tests/: aggregation_test.py
crates/kreuzberg-cli/: Cargo.toml  README.md  build.rs
crates/kreuzberg-ffi/: Cargo.toml  README.md  build.rs  kreuzberg-ffi-install.pc  kreuzberg-ffi.pc  kreuzberg-ffi.pc.in  kreuzberg.h
crates/kreuzberg-ffi/benches/: result_view_benchmark.rs
crates/kreuzberg-ffi/src/: batch_streaming.rs  config.rs  error.rs  lib.rs  result_pool.rs  result_view.rs  string_intern.rs  validation.rs
crates/kreuzberg-ffi/tests/: plugin_registration_tests.rs
crates/kreuzberg-node/: ASYNC_COMPARISON.md  Cargo.toml  README.md  build.rs  package.json  tsconfig.json  tsup.config.ts
crates/kreuzberg-node/npm/darwin-arm64/: package.json
crates/kreuzberg-node/npm/darwin-x64/: package.json
crates/kreuzberg-node/npm/linux-arm-gnueabihf/: package.json
crates/kreuzberg-node/npm/linux-arm64-gnu/: package.json
crates/kreuzberg-node/npm/linux-x64-gnu/: package.json
crates/kreuzberg-node/npm/win32-arm64-msvc/: package.json
crates/kreuzberg-node/npm/win32-x64-msvc/: package.json
crates/kreuzberg-node/src/: lib.rs
crates/kreuzberg-node/tests/binding/: async-postprocessor.spec.ts  cli.spec.ts  configuration.spec.ts  embeddings.spec.ts  error-handling.spec.ts  error-integration.spec.ts  extraction-functions.spec.ts  ffi-boundary.spec.ts  guten-ocr.spec.ts  helpers.spec.ts  mime-utils.spec.ts  ocr-backend.spec.ts  plugin-system.spec.ts  registry-functions.spec.ts  security.spec.ts  sync-async-coverage.spec.ts  validator.spec.ts
crates/kreuzberg-node/tests/binding/helpers/: mock-binding.ts
crates/kreuzberg-node/tests/helpers/: integration-helpers.ts
crates/kreuzberg-node/tests/smoke/: extraction.spec.ts
crates/kreuzberg-node/typescript/: cli.ts  index.ts  types.ts
crates/kreuzberg-node/typescript/ocr/: guten-ocr.ts
docker/: Dockerfile.core  Dockerfile.full
docs/: CNAME  OBJECT_POOLING.md  cli.md  contributing.md  features.md  index.md  performance-analysis.md
e2e/rust/: Cargo.toml
e2e/rust/tests/: email_test.rs  html_test.rs  html_tests.rs  image_test.rs  ocr_test.rs  office_test.rs  office_tests.rs  pdf_test.rs  pdf_tests.rs  plugin_apis_test.rs  smoke_test.rs  structured_test.rs  xml_test.rs
kreuzberg/: __init__.py  __main__.py  _cli_config.py  _config.py  _constants.py  _document_classification.py  _entity_extraction.py  _error_handling.py  _extractors.py  _gmft.py  _html.py  _language_detection.py  _mime_types.py  _pandoc.py  _pdf.py  _playa.py  _pptx.py  _registry.py  _string.py  _sync.py  _tesseract.py  _types.py  _xlsx.py  cli.py  exceptions.py  extraction.py
results/: baseline.json  serialization.json  statistical.json
scripts/: README_DOCKER_TESTING.md  build_cli_binary.sh  build_napi_module.sh  build_python_bindings.sh  build_python_dev.sh  build_python_sdist.sh  build_ruby_extension.sh  check_v3_changes.sh  compare_benchmarks.py  download_pdfium_runtime.sh  install-system-pdfium-linux.sh  install-system-pdfium-macos.sh  install_prek.sh  list_artifacts.sh  (+16 more)
tools/benchmark-harness/: Cargo.toml
tools/benchmark-harness/fixtures/: .profiling-subset
tools/benchmark-harness/scripts/: go.mod  kreuzberg_extract.ts  kreuzberg_extract_go.go
tools/benchmark-harness/src/: config.rs  error.rs  fixture.rs  html.rs  lib.rs  main.rs  output.rs  profiling.rs  runner.rs
tools/benchmark-harness/src/adapters/: external.rs  kreuzberg.rs  native.rs  node.rs  subprocess.rs
tools/benchmark-harness/templates/: README.md  base.html.jinja  flamegraphs.html.jinja
tools/benchmark-harness/templates/charts/: duration.html.jinja  duration_script.js.jinja  filetype.html.jinja  filetype_script.js.jinja  memory.html.jinja  memory_script.js.jinja  success.html.jinja  success_script.js.jinja  throughput.html.jinja  throughput_script.js.jinja
tools/benchmark-harness/templates/components/: empty_state.html.jinja  header.html.jinja  success_summary.html.jinja  tabs.html.jinja
tools/benchmark-harness/templates/styles/: charts.css.jinja  components.css.jinja  layout.css.jinja  variables.css.jinja
tools/e2e-generator/: Cargo.toml
tools/e2e-generator/src/: csharp.rs  go.rs  java.rs  ruby.rs  typescript.rs  wasm_deno.rs  wasm_workers.rs
(+1372 files in other folders)
