[workspace]
members = [
    "crates/kreuzberg",
    "crates/kreuzberg-py",
    "crates/kreuzberg-ffi",
    "crates/kreuzberg-tesseract",
    "crates/kreuzberg-cli",
    "crates/kreuzberg-node",
    "tools/benchmark-harness",
    "tools/e2e-generator",
    "e2e/rust",
]
# Note: packages/ruby/ext/kreuzberg_rb/native is excluded because it uses a vendored
# kreuzberg crate for gem packaging. Build it separately via: cd packages/ruby && bundle exec rake compile
default-members = ["crates/kreuzberg", "crates/kreuzberg-cli"]
resolver = "2"

[patch.crates-io]
kreuzberg = { path = "crates/kreuzberg" }
kreuzberg-tesseract = { path = "crates/kreuzberg-tesseract" }
rb-sys = { git = "https://github.com/oxidize-rb/rb-sys", rev = "acca8a7feac415f41f3773a940cbee2ae3167b94" }

[workspace.package]
version = "4.0.0-rc.5"
edition = "2024"
rust-version = "1.91"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://kreuzberg.dev"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "fs", "time", "io-util"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Async utilities
async-trait = "0.1.89"

# Tracing/observability
tracing = "0.1"

# Utilities
ahash = "0.8.12"
base64 = "0.22.1"
hex = "0.4.3"
num_cpus = "1.17.0"

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Testing (dev)
tempfile = "3.23.0"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
