[project]
name = "kreuzberg-benchmarks"
version = "0.1.0"
description = "Performance benchmarking suite for Kreuzberg text extraction library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# Entry points commented out due to uv workspace limitations
# Run with: uv run python -m benchmarks.src COMMAND
# [project.scripts]
# kreuzberg-bench = "src.cli:app"

dependencies = [
  "click>=8.2.1",
  "kreuzberg",
  "msgpack>=1.1.1",
  "psutil>=5.9",
  "py-spy>=0.3.14",
  "rich>=13",
]

[tool.uv.sources]
kreuzberg = { workspace = true }
