[package]
name = "kreuzberg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line interface for Kreuzberg document intelligence"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kreuzberg = { path = "../kreuzberg", version = "4.0.0-rc.1", features = ["cli"] }
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = []
api = ["kreuzberg/api"]
mcp = ["kreuzberg/mcp"]
all = ["api", "mcp"]

[[bin]]
name = "kreuzberg"
path = "src/main.rs"

[dev-dependencies]
ureq = { version = "3.1", features = ["json"] }
tempfile = "3.23.0"
