[package]
name = "kreuzberg-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
description = "C FFI bindings for Kreuzberg document intelligence library"
license = "MIT"
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzberg-ffi"
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
kreuzberg = { path = "../kreuzberg", features = ["full"] }
serde_json = "1.0.145"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
cbindgen = "0.29"
