[package]
name = "kreuzberg-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "C FFI bindings for Kreuzberg document intelligence library"
license.workspace = true
repository = "https://github.com/Goldziher/kreuzberg"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzberg-ffi"
readme = "README.md"
keywords = ["ffi", "bindings", "document", "extraction", "api"]
categories = ["development-tools::ffi", "text-processing"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
kreuzberg = { path = "../kreuzberg", features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
html-to-markdown-rs = { version = "2.9.2", default-features = false, optional = true }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3.23"

[features]
default = ["html", "embeddings"]
html = ["html-to-markdown-rs"]
embeddings = ["kreuzberg/embeddings"]
