[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "benchmark-harness"
path = "src/main.rs"

[lib]
name = "benchmark_harness"
path = "src/lib.rs"

[dependencies]
# Core dependencies
kreuzberg = { path = "../../crates/kreuzberg", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# CLI dependencies
clap = { version = "4", features = ["derive", "env"] }

# Async traits
async-trait = "0.1"

# Monitoring dependencies
sysinfo = "0.37"

# Utilities
ahash = "0.8"
num_cpus = "1"
which = "8"

# Optional external framework integrations
extractous = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
extractous-native = ["dep:extractous"]
