[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"

[[bin]]
name = "benchmark-harness"
path = "src/main.rs"

[lib]
name = "benchmark_harness"
path = "src/lib.rs"

[dependencies]
# Core dependencies
kreuzberg = { path = "../../crates/kreuzberg", features = ["full"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# CLI dependencies
clap = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Monitoring dependencies
sysinfo = "0.37"

# Utilities
ahash = { workspace = true }
num_cpus = { workspace = true }
which = "8"
chrono = "0.4"
minijinja = { version = "2.5", features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
