[package]
name = "kreuzberg-e2e-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
